crates/mun_codegen/src/snapshots/mun_codegen__test__conditional_return_expr.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn main(a:i32) -> i32 {\n        if a > 4 {\n            return a;\n        }\n        a - 1\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @main(i32 %0) {
body:
  %greater = icmp sgt i32 %0, 4
  %sub = sub i32 %0, 1
  %common.ret.op = select i1 %greater, i32 %0, i32 %sub
  ret i32 %common.ret.op
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
