crates/mun_codegen/src/snapshots/mun_codegen__test__function.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn main() {\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

define void @main() {
body:
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"
