crates/mun_codegen/src/snapshots/mun_codegen__test__function_arguments.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn main(a:i32) -> i32 {\n      a\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @main(i32 %0) {
body:
  ret i32 %0
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
