crates/mun_codegen/src/snapshots/mun_codegen__test__issue_133.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    fn do_the_things(n: i32) -> i32 {\n        n + 7\n    }\n    \n    pub fn main() {\n        do_the_things(3);\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

define i32 @do_the_things(i32 %0) {
body:
  %add = add i32 %0, 7
  ret i32 %add
}

define void @main() {
body:
  %do_the_things = call i32 @do_the_things(i32 3)
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"
